kubernetes/apollo/apps/network/echo-server/app/httproute-internal.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-server-internal
spec:
  hostnames:
    - echo-apollo.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: echo-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
